# fscmp

./: .travis.yml  Cargo.toml  README.md  fscmp.spec  fscmp.wxs
.github/workflows/: build-msi.yml  build-rpm.yml  ci.yml
src/: cmp.rs  config.rs  file_ext_exact.rs  main.rs  range_chunks.rs
src/cmp/: comparison.rs  diff.rs  mod.rs
