[package]
name = "fscmp"
version = "0.2.13"
authors = ["Dror Levin <spatz@psybear.com>"]
description = "Utility for comparing files/directories"
repository = "https://github.com/drrlvn/fscmp"
license = "Apache-2.0"
edition = "2018"

[features]
default = ["simplelog"]

[dependencies]
failure = "0.1"
libc = "0.2"
log = "0.4"
loggest = { version = "0.1", optional = true }
openat = "0.1"
rayon = "1.0"
simplelog = { version = "0.5", optional = true }
structopt = "0.2"

[dev-dependencies]
tempfile = "3.0"
walkdir = "2.1"
