[package]
name = "fscmp"
version = "0.2.16"
authors = ["Dror Levin <spatz@psybear.com>"]
description = "Utility for comparing files/directories"
repository = "https://github.com/Infinidat/fscmp"
license = "Apache-2.0"
edition = "2018"

[features]
default = ["simplelog"]

[dependencies]
failure = "0.1.5"
libc = "0.2.62"
log = "0.4.8"
loggest = { version = "0.2.1", optional = true }
nix = "0.16.0"
openat = "0.1.18"
rayon = "1.2.0"
simplelog = { version = "0.7.1", optional = true }
structopt = "0.3.1"

[dev-dependencies]
tempfile = "3.1.0"
walkdir = "2.2.9"
